--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3828,7 +3828,7 @@ input[type=button].btn-block {
 .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #3490dc;
+  background-color: #38c172;
 }
 
 .dropdown-item.disabled,
